# chef-drop-brief

./: .gitignore  APPLICATION_BLURB.md  DEMO_SHOTLIST.md  INSTALL.md  LICENSE  README.md  SKILL.md  pyproject.toml
reference/: banned_cliches.json  chefs.json  segments.json  voice_samples.md
reference/braze_schemas/: email.schema.json  push.schema.json  sms.schema.json
scripts/: _evals_advanced.py  format_braze.py  load_context.py  run_evals.py
tests/: test_evals.py
tests/fixtures/: bad_brief_banned_cliche.json  bad_brief_channel_overflow.json  bad_brief_claimed_facts.json  bad_brief_cta_missing.json  bad_brief_dietary_contradiction.json  bad_brief_personalization_missing.json  bad_brief_policy_violation.json  bad_brief_voice_dissimilar.json  bad_brief_voice_signals_missing.json  good_brief.json
