[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chef-drop-brief"
version = "0.1.0"
description = "Claude Code Skill that drafts Braze-ready chef-drop campaigns with 9 deterministic copy evals."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sahil Mehta" }]
dependencies = [
    "sentence-transformers>=2.7.0",
    "jsonschema>=4.21.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-data]
"*" = ["reference/**/*", "tests/fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
